k8s/base/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-service
  namespace: platform-dev
spec:
  type: ClusterIP
  selector:
    app: platform-app
  ports:
    - port: 80
      targetPort: 8000
