k8s/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: platform-dev
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
